[package]
name = "famnit_page_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.10.1"
html5ever = "0.29.0"
url = "0.2.37"
html2md = "0.2.14"
hyper-native-tls = "0.3.0"
markup5ever_rcdom = "0.3.0"
tendril = "0.4.3"
